Fix layout of gametes in gamete pool/pen - add react-dimensions library - lay out gametes manually with computed overlap - adjust animation to match new layout

--- a/src/stylus/challenges.styl
+++ b/src/stylus/challenges.styl
@@ -226,8 +226,10 @@
     &.target
       height: 102px
 
-  .geniblocks.gamete-pen
+  .gamete-pen-wrapper
+    margin-left: -15px
     margin-top: -15px
+    width: 80%;
 
 .egg
   position: relative
