--- a/src/stylus/gamete-pen.styl
+++ b/src/stylus/gamete-pen.styl
@@ -1,6 +1,6 @@
 .geniblocks.gamete-pen
-  display: flex
-  flex-wrap: wrap
+  width: 100%
+  height: 100%
   border: 1px solid black
   margin: 3px
   padding: 2px
